--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --accent-color: #2196f3;
   --light-theme-logo-color: #000000;
   --dark-theme-logo-color: #fff;
+  --animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p {
@@ -564,14 +565,17 @@ font-size: 16px;
 }
 .project-img {
   position: relative;
+  overflow: hidden;
+
+
 }
 .project-img-content {
   position: absolute;
   top: 0;
   bottom: 0;
   
-  width: 100%;
-  padding-top: 63px;
+  
+padding-top: 63px;
  padding-right: 24px;
  padding-left: 24px;
     background-color: rgba(33, 150, 243, 0.9);
@@ -579,11 +583,81 @@ font-size: 16px;
     font-size: 18px;
     line-height: 28px;
     color: var(--secondary-text-color);
-    opacity: 0;
+    
+    transform: translateY(101%);
+    transition: transform 250ms var(--animation-timing-function);
+    
 
 }
 .project-card:hover .project-img-content {
-  opacity: 1;
+  transform: translateY(0);
+  
 }
 
 
+/* 
+.nav-link::after {
+content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-image: url(../images/icons/underline.svg);
+  transform: translateX(-100%);
+  transition: transform 250ms var(--animation-timing-function);
+  
+} */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition: transform 250ms var(--animation-timing-function), opacity 250ms var(--animation-timing-function);
+  transform: scaleY(1);
+  opacity: 1;
+  
+}
+.backdrop.is-hidden {
+   opacity: 0;
+   pointer-events: none;
+   transform: scaleY(0);
+  
+  
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+
+  background-color: #fff;
+}
+.modal-close-button-pos {
+display: flex;
+justify-content: flex-end;
+  
+}
+.modal-close-button {
+  width: 30px;
+  height: 30px;
+    margin: 8px;
+  border: 1px solid #0000001A;
+  border-radius: 50%;
+  background-color: transparent;
+
+  cursor: pointer;
+
+
+
+  font-size: 18px;
+}
